@@ -10,6 +10,7 @@ Mantis
  * Modified report page formating.
  * Modified file size reports to show up as bytes.
  * Added Hungarian translation.
+ * Added g_bug_link_tag to let users customize how to create bug links.
 
 03.15.2002  -   0.17.1
 
